[gd_scene load_steps=6 format=3 uid="uid://dydlk8um0kt5u"]

[ext_resource type="Script" uid="uid://crtxrvwtrgr0" path="res://TEST/TestItems/test_inv_controller.gd" id="1_2kmic"]
[ext_resource type="PackedScene" uid="uid://bp8rfklhar2f4" path="res://UI/inventory_overlay.tscn" id="2_jdyiw"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2kmic"]
sky_top_color = Color(0.810331, 1.44392e-07, 0.430908, 1)
sky_horizon_color = Color(0.5260259, 0.23522349, 0.3564071, 1)
ground_bottom_color = Color(0.352879, 0, 0.0538266, 1)
ground_horizon_color = Color(0.5260259, 0.23522349, 0.3564071, 1)

[sub_resource type="Sky" id="Sky_jdyiw"]
sky_material = SubResource("ProceduralSkyMaterial_2kmic")

[sub_resource type="Environment" id="Environment_q1pnh"]
background_mode = 2
sky = SubResource("Sky_jdyiw")
tonemap_mode = 2
glow_enabled = true

[node name="Node" type="Node"]
script = ExtResource("1_2kmic")

[node name="InventoryOverlay" parent="." instance=ExtResource("2_jdyiw")]

[node name="SubViewportContainer" parent="InventoryOverlay/InventoryRoot" index="0"]
stretch = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="InventoryOverlay/InventoryRoot/SubViewportContainer/SubViewport" index="0"]
environment = SubResource("Environment_q1pnh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="InventoryOverlay/InventoryRoot/SubViewportContainer/SubViewport" index="1"]
transform = Transform3D(0.91128963, 0.3387253, -0.23412919, -0.0693886, 0.6867917, 0.72353464, 0.40587753, -0.6431038, 0.6493697, -2.0358877, 3.038813, 3.422544)
shadow_enabled = true
directional_shadow_max_distance = 1.0

[node name="InventoryCarousel" parent="InventoryOverlay/InventoryRoot/SubViewportContainer/SubViewport" index="2"]
x_offset = 2.0
selected_z = 1.0

[node name="InventoryCam" parent="InventoryOverlay/InventoryRoot/SubViewportContainer/SubViewport/InventoryCarousel" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[editable path="InventoryOverlay"]
